--- a/docs/sysutils.tex
+++ b/docs/sysutils.tex
@@ -1117,6 +1117,7 @@ Function ExpandUNCFileName(Const FileName : string): String;
 \var{ExpandUNCFileName} runs \seef{ExpandFileName} on \var{FileName}
 and then attempts to replace the driveletter by the name of a shared disk.
 \Errors
+None.
 \SeeAlso
 \seef{ExtractFileName}, \seef{ExtractFilePath}, \seef{ExtractFileDir},
 \seef{ExtractFileDrive}, \seef{ExtractFileExt}, \seef{ExtractRelativePath}
