--- a/docs/user.tex
+++ b/docs/user.tex
@@ -1498,7 +1498,8 @@ you want to compile Turbo Pascal code that uses these words.
 because \fpc is a 32 bit compiler, so they're obsolete.
 \item \var{INTERRUPT} will work only on the \dos target.
 \item Boolean expressions are only evaluated until their result is completely
-determined. The rest of the expression will be ignored.
+determined. The rest of the expression will be ignored. This is
+configurable as of FPC 1.9.
 \item By default the compiler uses  \var{AT\&T} assembler syntax.
 This is mainly because \fpc uses \gnu \var{as}. However, other assembler
 forms are available. For more information, see \progref.
