+ Fixed errno_location problem

--- a/packages/base/libc/README
+++ b/packages/base/libc/README
@@ -22,4 +22,14 @@ The translation was done on a SuSE 8.1 machine:
 Kernel version: 2.4.18
 glibc version: 2.3
 
+Note on the Libc errno variable. On recent systems the errno symbol is no
+longer published in libc. It has been replaced by a __errno_location
+pointer, with a macro in the C header files to mask this. The pascal 
+Libc files assume this by default. This also means you cannot set the 
+errno value directly, you must use the 'seterrno' procedure for that.
+(see errno.inc)
+
+The old mechanism of a published errno libc variable is still available 
+by setting the LIBC_OLDERRNO define when compiling the libc units.
+
 Michael.
