+ Fixed some glitch when creating HTML

--- a/docs/keys.tex
+++ b/docs/keys.tex
@@ -44,5 +44,5 @@
 34 & ALT-Period       & 6B & ALT-F4           & A2 & ALT-Ins          \\
 35 & ALT-Slash        & 6C & ALT-F5           & A3 & ALT-Del          \\
 37 & ALT-GreyAst      & 6D & ALT-F6           & A5 & ALT-Tab          \\
-3B & F1              & 6E & ALT-F7           &                      \\
-3C & F2              & 6F & ALT-F8           &                      \\
+3B & F1              & 6E & ALT-F7            & &                     \\
+3C & F2              & 6F & ALT-F8            & &                     \\ 
