* overloaded ExecuteProcess added, EnvStr param changed to longint

--- a/docs/dos.tex
+++ b/docs/dos.tex
@@ -434,7 +434,7 @@ None.
 
 \begin{function}{EnvStr}
 \Declaration
-Function EnvStr (Index: integer) : string;\Description
+Function EnvStr (Index: longint) : string;\Description
 
 \var{EnvStr} returns the \var{Index}-th \var{Name=Value} pair from the list
 of environment variables. 
