--- a/install/man/man1/fpc.1
+++ b/install/man/man1/fpc.1
@@ -508,8 +508,7 @@ Switch on Delphi 2 extensions.
 Support C-style operators, i.e. *=, +=, /= and -=.
 .TP
 .BI \-Sd
-tells the compiler to dispose asmlists. This uses less memory,
-but is slower.
+Tries to be Delphi compatible
 .TP
 .BI \-Se
 The compiler stops after the first error. Normally,
